View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027754 | Open CASCADE | OCCT:Configuration | public | 2016-08-05 22:01 | 2016-12-09 16:38 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 7.0 | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027754: Configuration - fix compilation of Standard.cxx on non-x86 desktop systems | ||||
Description | OCCT fail to compile on non-x86 Linux due to inclusion of "mm_malloc.h". | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR27754 has been created by kgv. SHA-1: c05d0ddcc2823618e2044499cc693259db29fc09 Detailed log of new commits: Author: kgv Date: Fri Aug 5 19:05:19 2016 +0000 0027754: Configuration - fix compilation of Standard.cxx on non-x86 desktop systems |
|
Branch CR27754 has been updated forcibly by kgv. SHA-1: 29801c029abc9c78c1b7490c354a40fe190e2b55 |
|
Please check compilation. Regression testing is not needed. |
|
Branch CR27754 has been successfully compiled on all platforms. There are no new warnings http://jenkins-test-08.nnov.opencascade.com:8080/view/CR27754/view/OCCT%20compile/ |
|
Branch CR27754 has been deleted by inv. SHA-1: 29801c029abc9c78c1b7490c354a40fe190e2b55 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-08-05 22:01 | kgv | New Issue | |
2016-08-05 22:01 | kgv | Assigned To | => bugmaster |
2016-08-05 22:03 | kgv | Summary | Configuration - fix compilation on non-x86 desktop systems => Configuration - fix compilation of Standard.cxx on non-x86 desktop systems |
2016-08-05 22:06 | git | Note Added: 0056517 | |
2016-08-05 22:08 | git | Note Added: 0056518 | |
2016-08-05 22:10 | kgv | Note Added: 0056519 | |
2016-08-05 22:10 | kgv | Severity | minor => trivial |
2016-08-05 22:10 | kgv | Status | new => resolved |
2016-08-05 22:10 | kgv | OS | Debian 6.0 => Debian 7.0 |
2016-08-05 22:10 | kgv | OS Version | 32 bit => ppc |
2016-08-05 22:10 | kgv | Status | resolved => reviewed |
2016-08-09 09:50 | bugmaster | Note Added: 0056583 | |
2016-08-09 09:50 | bugmaster | Status | reviewed => tested |
2016-08-12 10:48 | bugmaster | Changeset attached | => occt master c58b1b62 |
2016-08-12 10:48 | bugmaster | Status | tested => verified |
2016-08-12 10:48 | bugmaster | Resolution | open => fixed |
2016-08-23 12:42 | kgv | Relationship added | parent of 0027801 |
2016-08-26 16:24 | git | Note Added: 0057159 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |