0027754: Configuration - fix compilation of Standard.cxx on non-x86 desktop systems